appId: dev.ligh.Fixture
---
- launchApp
- assertVisible: LighHome
- tapOn: NameField
- inputText: "maestro"
- tapOn: GoNext
- assertVisible: LighDone
